Make it remote for mobile and app demo

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="src\components\ui\TextMine-Pro.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    
+    <title>TextMine Pro</title>
   </head>
   <body>
     <div id="root"></div>
