--- a/index.html
+++ b/index.html
@@ -3,6 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="src\components\ui\TextMine-Pro.ico">
+    <!-- Social Media Preview (Open Graph) -->
+    <meta property="og:title" content="TextMine Pro - For Researchers Only" />
+    <meta property="og:description" content="Analyze hundreds of documents quickly. Process large annual reports, normalize keyword counts, and gain interactive insights." />
+    <meta property="og:image" content="https://example.com/path/to/your-image.jpg" />
+    <meta property="og:url" content="https://yoursite.com" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="TextMine Pro - For Researchers Only" />
+    <meta name="twitter:description" content="Analyze hundreds of documents quickly, with advanced keyword normalization and interactive insights." />
+    <meta name="twitter:image" content="https://example.com/path/to/your-image.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <title>TextMine Pro</title>
