Update favicon and meta tags

--- a/index.html
+++ b/index.html
@@ -2,21 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="src\components\ui\TextMine-Pro.ico">
-    <!-- Social Media Preview (Open Graph) -->
+    <link rel="icon" type="image/x-icon" href="TextMine-Pro.ico">
+    <!-- Open Graph tags for social media and WhatsApp -->
     <meta property="og:title" content="TextMine Pro - For Researchers Only" />
     <meta property="og:description" content="Analyze hundreds of documents quickly. Process large annual reports, normalize keyword counts, and gain interactive insights." />
-    <meta property="og:image" content="https://example.com/path/to/your-image.jpg" />
-    <meta property="og:url" content="https://yoursite.com" />
+    <meta property="og:image" content="https://i.ibb.co/PZh4J4YY/image.png" />
+    <meta property="og:url" content="https://YashPratap19.github.io/textmine-pro-website" />
     <meta property="og:type" content="website" />
 
-    <!-- Twitter Card -->
+    <!-- Twitter Card (not used by WhatsApp but good for other platforms) -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="TextMine Pro - For Researchers Only" />
-    <meta name="twitter:description" content="Analyze hundreds of documents quickly, with advanced keyword normalization and interactive insights." />
-    <meta name="twitter:image" content="https://example.com/path/to/your-image.jpg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
+    <meta name="twitter:description" content="Analyze hundreds of documents quickly with TextMine Pro." />
+    <meta name="twitter:image" content="https://i.ibb.co/PZh4J4YY/image.png" />
+
+    <!-- Optional: Theme color can influence WhatsApp preview's background on some devices -->
+    <meta name="theme-color" content="#1a202c" />
     <title>TextMine Pro</title>
   </head>
   <body>
