--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/x-icon" href="TextMine-Pro.ico">
     <!-- Open Graph tags for social media and WhatsApp -->
     <meta property="og:title" content="TextMine Pro - For Researchers Only" />
@@ -10,13 +11,13 @@
     <meta property="og:url" content="https://YashPratap19.github.io/textmine-pro-website" />
     <meta property="og:type" content="website" />
 
-    <!-- Twitter Card (not used by WhatsApp but good for other platforms) -->
+    <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="TextMine Pro - For Researchers Only" />
     <meta name="twitter:description" content="Analyze hundreds of documents quickly with TextMine Pro." />
     <meta name="twitter:image" content="https://i.ibb.co/PZh4J4YY/image.png" />
 
-    <!-- Optional: Theme color can influence WhatsApp preview's background on some devices -->
+    <!-- Theme color -->
     <meta name="theme-color" content="#1a202c" />
     <title>TextMine Pro</title>
   </head>
