--- a/index.html
+++ b/index.html
@@ -1,28 +1,31 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/x-icon" href="TextMine-Pro.ico">
-    <!-- Open Graph tags for social media and WhatsApp -->
-    <meta property="og:title" content="TextMine Pro - For Researchers Only" />
-    <meta property="og:description" content="Analyze hundreds of documents quickly. Process large annual reports, normalize keyword counts, and gain interactive insights." />
-    <meta property="og:image" content="https://i.ibb.co/PZh4J4YY/image.png" />
-    <meta property="og:url" content="https://YashPratap19.github.io/textmine-pro-website" />
-    <meta property="og:type" content="website" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" type="image/x-icon" href="TextMine-Pro.ico">
 
-    <!-- Twitter Card -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="TextMine Pro - For Researchers Only" />
-    <meta name="twitter:description" content="Analyze hundreds of documents quickly with TextMine Pro." />
-    <meta name="twitter:image" content="https://i.ibb.co/PZh4J4YY/image.png" />
+  <!-- Open Graph (OG) tags for LinkedIn, Facebook, and WhatsApp -->
+  <meta property="og:title" content="TextMine Pro - For Researchers Only" />
+  <meta property="og:description" content="Analyze hundreds of documents quickly. Process large annual reports, normalize keyword counts, and gain interactive insights." />
+  <meta property="og:image" content="https://i.ibb.co/PZh4J4YY/image.png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="627" />
+  <meta property="og:url" content="https://YashPratap19.github.io/textmine-pro-website" />
+  <meta property="og:type" content="website" />
 
-    <!-- Theme color -->
-    <meta name="theme-color" content="#1a202c" />
-    <title>TextMine Pro</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
-</html>
+  <!-- LinkedIn-specific metadata (uses OG tags) -->
+  <meta name="linkedin:card" content="summary_large_image" />
+  <meta name="linkedin:title" content="TextMine Pro - The Fastest Research Tool" />
+  <meta name="linkedin:description" content="Forget Ctrl+F! Process multiple PDFs at once with 10x speed and unparalleled accuracy." />
+  <meta name="linkedin:image" content="https://i.ibb.co/PZh4J4YY/image.png" />
+
+  <!-- Twitter Card (for better sharing on Twitter) -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="TextMine Pro - For Researchers Only" />
+  <meta name="twitter:description" content="Analyze hundreds of documents quickly with TextMine Pro." />
+  <meta name="twitter:image" content="https://i.ibb.co/PZh4J4YY/image.png" />
+
+  <!-- Theme color -->
+  <meta name="theme-color" content="#1a202c" />
+
+  <title>TextMine Pro</title>
+</head>
