--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Open Graph (OG) tags for LinkedIn, Facebook, and WhatsApp -->
     <meta property="og:title" content="TextMine Pro - For Researchers Only" />
     <meta property="og:description" content="Analyze hundreds of documents quickly. Process large annual reports, normalize keyword counts, and gain interactive insights." />
-    <meta property="og:image" content="https://i.ibb.co/PZh4J4YY/image.png" />
+    <meta property="og:image" content="https://i.imgur.com/ACcgqyE.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="627" />
     <meta property="og:url" content="https://YashPratap19.github.io/textmine-pro-website" />
@@ -18,13 +18,13 @@
     <meta name="linkedin:card" content="summary_large_image" />
     <meta name="linkedin:title" content="TextMine Pro - The Fastest Research Tool" />
     <meta name="linkedin:description" content="Forget Ctrl+F! Process multiple PDFs at once with 10x speed and unparalleled accuracy." />
-    <meta name="linkedin:image" content="https://i.ibb.co/PZh4J4YY/image.png" />
+    <meta name="linkedin:image" content=https://i.imgur.com/ACcgqyE.png" />
 
     <!-- Twitter Card (for better sharing on Twitter) -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="TextMine Pro - For Researchers Only" />
     <meta name="twitter:description" content="Analyze hundreds of documents quickly with TextMine Pro." />
-    <meta name="twitter:image" content="https://i.ibb.co/PZh4J4YY/image.png" />
+    <meta name="twitter:image" content=https://i.imgur.com/ACcgqyE.png" />
 
     <!-- Theme color -->
     <meta name="theme-color" content="#1a202c" />
