--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     <meta name="linkedin:card" content="summary_large_image" />
     <meta name="linkedin:title" content="TextMine Pro - The Fastest Research Tool" />
     <meta name="linkedin:description" content="Forget Ctrl+F! Process multiple PDFs at once with 10x speed and unparalleled accuracy." />
-    <meta name="linkedin:image" content=https://i.imgur.com/ACcgqyE.png" />
+    <meta name="linkedin:image" content="https://i.imgur.com/ACcgqyE.png" />
 
     <!-- Twitter Card (for better sharing on Twitter) -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="TextMine Pro - For Researchers Only" />
     <meta name="twitter:description" content="Analyze hundreds of documents quickly with TextMine Pro." />
-    <meta name="twitter:image" content=https://i.imgur.com/ACcgqyE.png" />
+    <meta name="twitter:image" content="https://i.imgur.com/ACcgqyE.png" />
 
     <!-- Theme color -->
     <meta name="theme-color" content="#1a202c" />
