--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/x-icon" href="TextMine-Pro.ico">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZK70FWMY3N"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
+      gtag('config', 'G-ZK70FWMY3N');
+    </script>
     <!-- Open Graph (OG) tags for LinkedIn, Facebook, and WhatsApp -->
     <meta property="og:title" content="TextMine Pro - For Researchers Only" />
     <meta property="og:description" content="Analyze hundreds of documents quickly. Process large annual reports, normalize keyword counts, and gain interactive insights." />
